<resources>
    <string name="app_name">Scouting App</string>
    <string name="title_activity_page2">page2</string>
    <string name="one">1</string>
    <string name="additional_information">Additional Information</string>

    <string name="psname">%s</string>
    <string name="alliance">%s</string>
    <string name="hatch">Hatch</string>
    <string name="okiedokes">Okay!</string>
    <string name="front">Front</string>
    <string name="_3">3</string>
    <string name="setview">%s</string>
    <string name="tablet">tablet number?</string>

    <string name="start">START</string>
    <string name="cargo">Cargo</string>
    <string name="side">Side</string>
    <string name="textview">TextView</string>
    <string name="_2">2</string>
    <string name="defense">Defense</string>
    <string name="blocked_score">Blocked Score</string>
    <string name="info">info</string>
    <string name="settings">settings</string>
    <string name="submit">submit</string>
    <string name="submitme">Are you sure?</string>
    <string name="alliance_score">Alliance Score: </string>
    <string name="team">Team:</string>
    <string name="match">Match:</string>
    <string name="alliance_">Alliance:</string>
    <string name="name">Name:</string>
    <string name="name2">%s</string>
    <string name="type_score_here">Type Score Here</string>
    <string name="namehint">%s</string>
    <string name="teamhint">%s</string>
    <string name="matchnumber">%s</string>
    <string name="cache_data">Cache Data</string>
    <string name="local_data">Local Data</string>
    <string name="help">help</string>
    <string name="next">next</string>
    <string name="clear">clear</string>
    <string name="red_card">red card?</string>
    <string name="no_show">no show?</string>
    <string name="yellow_card">yellow card?</string>
    <string name="did_they_move">did they move?</string>
    <string name="any_notes">Any notes?</string>
    <string name="password">password?</string>
    <string name="tablet_number">tablet number?</string>
    <string name="nothing_to_show"> Nothing to show!</string>
    <string name="hintname">Name?</string>
    <string name="hintteam">Team?</string>
    <string name="hintmatch">Match?</string>
    <string name="hintalliance">Alliance?</string>
    <string name="stop">STOP</string>
    <string name="check_timer">check timer</string>
    <string name="endgame">EndGame</string>
    <string name="cargo_ship">Cargo Ship</string>
    <string name="rocket_ship">Rocket Ship</string>
    <string-array name="CargoCargo">
        <item>Cargo (1)</item>
        <item>Cargo (2)</item>
        <item>Cargo (3)</item>
        <item>Cargo (4)</item>
        <item>Cargo (5)</item>
        <item>Cargo (6)</item>
        <item>Cargo (7)</item>
        <item>Cargo (8)</item>
    </string-array>
    <string-array name="CargoRocket">
        <item>Cargo (1)</item>
        <item>Cargo (2)</item>
        <item>Cargo (3)</item>
        <item>Cargo (4)</item>
        <item>Cargo (5)</item>
        <item>Cargo (6)</item>
    </string-array>
    <string-array name="CargoHatch">
        <item>Hatch (1)</item>
        <item>Hatch (2)</item>
        <item>Hatch (3)</item>
        <item>Hatch (4)</item>
        <item>Hatch (5)</item>
        <item>Hatch (6)</item>
        <item>Hatch (7)</item>
        <item>Hatch (8)</item>
    </string-array>
    <string-array name="RocketHatch">
        <item>Hatch (1)</item>
        <item>Hatch (2)</item>
        <item>Hatch (3)</item>
        <item>Hatch (4)</item>
        <item>Hatch (5)</item>
        <item>Hatch (6)</item>
    </string-array>
</resources>
