<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostSubmit">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="52dp"
        android:text="@string/submitme"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/infolayout"
        android:layout_width="328dp"
        android:layout_height="207dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="42dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/team"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/match"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/alliance_"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/namehint"
                android:inputType="textPersonName"
                android:textSize="28sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/team"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/teamhint"
                android:inputType="number"
                android:textSize="28sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/match"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/matchnumber"
                android:inputType="number"
                android:textSize="28sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/alliance"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/alliance"
                android:inputType="textPersonName"
                android:textSize="28sp"
                tools:ignore="Autofill" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/allyscore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/alliance_score"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/typescorehere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ems="10"
            android:hint="@string/type_score_here"
            android:inputType="number"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/p2submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="153dp"
        android:onClick="submitButtonPageTwo"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>