<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdditionalInfo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/additional_information"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/redCard"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="100dp"
        android:checked="false"
        android:onClick="redSwitch"
        android:text="@string/red_card"
        android:thumbTint="#D32F2F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="false" />

    <Switch
        android:id="@+id/noShow"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="140dp"
        android:onClick="noShowSwitch"
        android:splitTrack="false"
        android:text="@string/no_show"
        android:thumbTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/yellowCard"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="150dp"
        android:onClick="yellowSwitch"
        android:text="@string/yellow_card"
        android:thumbTint="#AFB42B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="false" />

    <Switch
        android:id="@+id/noMove"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="150dp"
        android:checked="true"
        android:onClick="moveSwitch"
        android:text="@string/did_they_move"
        android:thumbTint="#0288D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="310dp"
        android:layout_height="275dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:hint="@string/any_notes"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textDirection="firstStrongRtl"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:background="#00FFFFFF"
        android:onClick="backButton"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_name"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>